# statistics_studay

./: .gitignore
FinancialEngineeringandRiskManagement/jupyter-docker/: Dockerfile  Makefile
FinancialEngineeringandRiskManagement/work/: Derivatives.ipynb  Untitled-1.ipynb  bayesian.ipynb  bond.ipynb
OECD/: fetch_data.py
OECD/.github/: copilot-instructions.md
OECD/data/: README.md  gdp_annual.csv  iip_quarterly.csv  labor_productivity_annual.csv  labor_productivity_ulc_quarterly.csv
OECD/jupyter-docker/: Dockerfile  docker-compose.yml  requestment.txt  run.sh
OECD/metadata/: codelist_measure.csv  codelist_ref_area.csv  codelist_ref_area_measure_unit_measure.csv  codelist_ref_area_measure_unit_measure_summary.md  codelist_unit_measure.csv  conceptscheme.xml  contentconstraint_focus.md  metadata_summary.json  request_key_item_guide.md  request_parameter_structure.md
OECD/pdf/: OECD-Productivity-Statistics-Database-metadata.md  pdf_to_markdown.py
OECD/work/: OECD_API.ipynb  OECD_DATA.ipynb
statistical_analysis_with_python/jupyter-docker/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requestment.txt
statistical_analysis_with_python/notebook/: Untitled-1.ipynb  Untitled-3.ipynb  Untitled-4.ipynb  Untitled-6.ipynb  Untitled-7.ipynb  Untitled-8.ipynb  Untitled-9.ipynb  Untitled-５.ipynb  Untitled_5.ipynb  statics_10.ipynb  statics_11.ipynb  statics_12.ipynb
