[project]
name = "statistical-analysis-with-python-jupyter"
version = "0.1.0"
description = "Jupyter environment for statistical_analysis_with_python"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy",
  "pandas>=2.2,<3",
  "matplotlib",
  "japanize-matplotlib",
  "scipy",
  "statsmodels",
  "scikit-learn",
  "requests",
  "pandas-datareader",
  "lxml",
  "PyPDF2",
  "googletrans==3.1.0a0",
  "pdfplumber",
  "plotly",
]

[tool.uv]
package = false
